// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/helmfile/extract updateDependency() upgrades dependency if chart is repeated 1`] = `
"
      repositories:
        - name: kiwigrid
          url: https://kiwigrid.github.io

      releases:
        - name: fluentd-elasticsearch-internal
          version: 5.3.1
          chart: kiwigrid/fluentd-elasticsearch

        - name: nginx-ingress
          version: 1.3.0
          chart: stable/nginx-ingress

        - name: fluentd-elasticsearch-external
          version: 5.3.1
          chart: kiwigrid/fluentd-elasticsearch
      "
`;

exports[`lib/manager/helmfile/extract updateDependency() upgrades dependency if valid upgrade 1`] = `
"
      repositories:
        - name: kiwigrid
          url: https://kiwigrid.github.io
      releases:
        - name: fluentd-elasticsearch
          version: 5.3.1
          chart: kiwigrid/fluentd-elasticsearch
      "
`;

exports[`lib/manager/helmfile/extract updateDependency() upgrades dependency if version field comes before name field 1`] = `
"
      repositories:
        - name: kiwigrid
          url: https://kiwigrid.github.io
      releases:
        - version: 5.3.1
          name: fluentd-elasticsearch
          chart: kiwigrid/fluentd-elasticsearch
      "
`;
